<resources>
    <string name="app_name">Green</string>
    <string name="content_description_user_icon">Icono de usuario para el registro</string>
    <string name="content_description_phone_icon">Icono de telefono</string>
    <string name="content_description_key_icon">Password icon</string>
    <string name="content_description_email_icon">email icon</string>

    <string name="form_name">name</string>
    <string name="form_phone">phone</string>
    <string name="form_email">email</string>
    <string name="form_password">password</string>
    <string name="form_confirm_password">password</string>

    <string name="email">EMAIL</string>
    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="createAccount">Crear una cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>